--- a/app/index.html
+++ b/app/index.html
@@ -18,8 +18,6 @@
 		<meta name="theme-color" content="#fff">
 		<!-- Custom Browsers Color End -->
 		<link rel="stylesheet" href="css/animate.min.css">
-		<link rel="stylesheet" href="css/owl.carousel.min.css">
-		<link rel="stylesheet" href="css/owl.theme.default.min.css">
 		<link rel="stylesheet" href="css/main.min.css">
 	</head>
 	<body>
@@ -632,39 +630,302 @@
 				
 				<div class="tab-content-g">
 					<div class="tab-gallery-box active">
-						<div class="owl-carousel owl-theme">
-							<div> Your Content 1 </div>
-							<div> Your Content 2 </div>
-							<div> Your Content 3 </div>
-							<div> Your Content 4 </div>
-							<div> Your Content 5 </div>
-							<div> Your Content 6 </div>
-							<div> Your Content 7 </div>
-							<div> Your Content 8 </div>
-							<div> Your Content 9 </div>
-							<div> Your Content 10 </div>
+						<div id="car-all" class="carousel slide">
+							<div class="carousel-inner">
+								<div class="carousel-item active">
+									<div class="row">
+										<div class="col-md-6 one-column">
+											<img src="img/gallery/retro-sm-1.jpg" alt="" class="img-responsive" data-toggle="modal" data-target="#retro-sm-1">
+											<div class="btn-gal-1"></div>
+											<div class="fl-box">
+												<img src="img/gallery/retro-sm-2.jpg" alt="" class="img-responsive">
+												<img src="img/gallery/retro-sm-3.jpg" alt="" class="img-responsive">
+											</div>
+										</div>
+										<div class="col-md-6 second-column">
+											<img src="img/gallery/retro-sm-6.jpg" alt="" class="img-responsive one">
+											<img src="img/gallery/retro-sm-4.jpg" alt="" class="img-responsive two">
+											<img src="img/gallery/retro-sm-5.jpg" alt="" class="img-responsive three">
+										</div>
+									</div>
+								</div>
+								<div class="carousel-item">
+									<div class="row">
+										<div class="col-md-6 one-column">
+											<img src="img/gallery/retro-sm-1.jpg" alt="" class="img-responsive">
+											<div class="fl-box">
+												<img src="img/gallery/retro-sm-2.jpg" alt="" class="img-responsive">
+												<img src="img/gallery/retro-sm-3.jpg" alt="" class="img-responsive">
+											</div>
+										</div>
+										<div class="col-md-6 second-column">
+											<img src="img/gallery/retro-sm-6.jpg" alt="" class="img-responsive one">
+											<img src="img/gallery/retro-sm-4.jpg" alt="" class="img-responsive two">
+											<img src="img/gallery/retro-sm-5.jpg" alt="" class="img-responsive three">
+										</div>
+									</div>
+								</div>
+								<div class="carousel-item">
+									<div class="row">
+										<div class="col-md-6 one-column">
+											<img src="img/gallery/retro-sm-1.jpg" alt="" class="img-responsive">
+											<div class="fl-box">
+												<img src="img/gallery/retro-sm-2.jpg" alt="" class="img-responsive">
+												<img src="img/gallery/retro-sm-3.jpg" alt="" class="img-responsive">
+											</div>
+										</div>
+										<div class="col-md-6 second-column">
+											<img src="img/gallery/retro-sm-6.jpg" alt="" class="img-responsive one">
+											<img src="img/gallery/retro-sm-4.jpg" alt="" class="img-responsive two">
+											<img src="img/gallery/retro-sm-5.jpg" alt="" class="img-responsive three">
+										</div>
+									</div>
+								</div>
+							</div>
+							<ol class="carousel-indicators">
+								<li data-target="#car-all" data-slide-to="0" class="active"></li>
+								<li data-target="#car-all" data-slide-to="1"></li>
+								<li data-target="#car-all" data-slide-to="2"></li>
+							</ol>
 						</div>
 					</div>
 					<div class="tab-gallery-box">
-						<div class="owl-carousel owl-theme">
-							<div> Your Content 1 </div>
-							<div> Your Content 2 </div>
-							<div> Your Content 3 </div>
-							<div> Your Content 4 </div>
+						<div id="car-zavod" class="carousel slide">
+							<div class="carousel-inner">
+								<div class="carousel-item active">
+									<div class="row">
+										<div class="col-md-6 one-column">
+											<img src="img/gallery/retro-sm-1.jpg" alt="" class="img-responsive">
+											<div class="fl-box">
+												<img src="img/gallery/retro-sm-2.jpg" alt="" class="img-responsive">
+												<img src="img/gallery/retro-sm-3.jpg" alt="" class="img-responsive">
+											</div>
+										</div>
+										<div class="col-md-6 second-column">
+											<img src="img/gallery/retro-sm-6.jpg" alt="" class="img-responsive one">
+											<img src="img/gallery/retro-sm-4.jpg" alt="" class="img-responsive two">
+											<img src="img/gallery/retro-sm-5.jpg" alt="" class="img-responsive three">
+										</div>
+									</div>
+								</div>
+								<div class="carousel-item">
+									<div class="row">
+										<div class="col-md-6 one-column">
+											<img src="img/gallery/retro-sm-1.jpg" alt="" class="img-responsive">
+											<div class="fl-box">
+												<img src="img/gallery/retro-sm-2.jpg" alt="" class="img-responsive">
+												<img src="img/gallery/retro-sm-3.jpg" alt="" class="img-responsive">
+											</div>
+										</div>
+										<div class="col-md-6 second-column">
+											<img src="img/gallery/retro-sm-6.jpg" alt="" class="img-responsive one">
+											<img src="img/gallery/retro-sm-4.jpg" alt="" class="img-responsive two">
+											<img src="img/gallery/retro-sm-5.jpg" alt="" class="img-responsive three">
+										</div>
+									</div>
+								</div>
+								<div class="carousel-item">
+									<div class="row">
+										<div class="col-md-6 one-column">
+											<img src="img/gallery/retro-sm-1.jpg" alt="" class="img-responsive">
+											<div class="fl-box">
+												<img src="img/gallery/retro-sm-2.jpg" alt="" class="img-responsive">
+												<img src="img/gallery/retro-sm-3.jpg" alt="" class="img-responsive">
+											</div>
+										</div>
+										<div class="col-md-6 second-column">
+											<img src="img/gallery/retro-sm-6.jpg" alt="" class="img-responsive one">
+											<img src="img/gallery/retro-sm-4.jpg" alt="" class="img-responsive two">
+											<img src="img/gallery/retro-sm-5.jpg" alt="" class="img-responsive three">
+										</div>
+									</div>
+								</div>
+							</div>
+							<ol class="carousel-indicators">
+								<li data-target="#car-zavod" data-slide-to="0" class="active"></li>
+								<li data-target="#car-zavod" data-slide-to="1"></li>
+								<li data-target="#car-zavod" data-slide-to="2"></li>
+							</ol>
 						</div>
 					</div>
 					<div class="tab-gallery-box">
-						<div class="owl-carousel owl-theme">
-							<div> Your Content 5 </div>
-							<div> Your Content 6 </div>
-							<div> Your Content 7 </div>
-							<div> Your Content 8 </div>
+						<div id="car-team" class="carousel slide">
+							<div class="carousel-inner">
+								<div class="carousel-item active">
+									<div class="row">
+										<div class="col-md-6 one-column">
+											<img src="img/gallery/retro-sm-1.jpg" alt="" class="img-responsive">
+											<div class="fl-box">
+												<img src="img/gallery/retro-sm-2.jpg" alt="" class="img-responsive">
+												<img src="img/gallery/retro-sm-3.jpg" alt="" class="img-responsive">
+											</div>
+										</div>
+										<div class="col-md-6 second-column">
+											<img src="img/gallery/retro-sm-6.jpg" alt="" class="img-responsive one">
+											<img src="img/gallery/retro-sm-4.jpg" alt="" class="img-responsive two">
+											<img src="img/gallery/retro-sm-5.jpg" alt="" class="img-responsive three">
+										</div>
+									</div>
+								</div>
+								<div class="carousel-item">
+									<div class="row">
+										<div class="col-md-6 one-column">
+											<img src="img/gallery/retro-sm-1.jpg" alt="" class="img-responsive">
+											<div class="fl-box">
+												<img src="img/gallery/retro-sm-2.jpg" alt="" class="img-responsive">
+												<img src="img/gallery/retro-sm-3.jpg" alt="" class="img-responsive">
+											</div>
+										</div>
+										<div class="col-md-6 second-column">
+											<img src="img/gallery/retro-sm-6.jpg" alt="" class="img-responsive one">
+											<img src="img/gallery/retro-sm-4.jpg" alt="" class="img-responsive two">
+											<img src="img/gallery/retro-sm-5.jpg" alt="" class="img-responsive three">
+										</div>
+									</div>
+								</div>
+								<div class="carousel-item">
+									<div class="row">
+										<div class="col-md-6 one-column">
+											<img src="img/gallery/retro-sm-1.jpg" alt="" class="img-responsive">
+											<div class="fl-box">
+												<img src="img/gallery/retro-sm-2.jpg" alt="" class="img-responsive">
+												<img src="img/gallery/retro-sm-3.jpg" alt="" class="img-responsive">
+											</div>
+										</div>
+										<div class="col-md-6 second-column">
+											<img src="img/gallery/retro-sm-6.jpg" alt="" class="img-responsive one">
+											<img src="img/gallery/retro-sm-4.jpg" alt="" class="img-responsive two">
+											<img src="img/gallery/retro-sm-5.jpg" alt="" class="img-responsive three">
+										</div>
+									</div>
+								</div>
+							</div>
+							<ol class="carousel-indicators">
+								<li data-target="#car-team" data-slide-to="0" class="active"></li>
+								<li data-target="#car-team" data-slide-to="1"></li>
+								<li data-target="#car-team" data-slide-to="2"></li>
+							</ol>
 						</div>
 					</div>
 					<div class="tab-gallery-box">
-						<div class="owl-carousel owl-theme">
-							<div> Your Content 9 </div>
-							<div> Your Content 10 </div>
+						<div id="car-polza" class="carousel slide">
+							<div class="carousel-inner">
+								<div class="carousel-item active">
+									<div class="row">
+										<div class="col-md-6 one-column">
+											<img src="img/gallery/retro-sm-1.jpg" alt="" class="img-responsive">
+											<div class="fl-box">
+												<img src="img/gallery/retro-sm-2.jpg" alt="" class="img-responsive">
+												<img src="img/gallery/retro-sm-3.jpg" alt="" class="img-responsive">
+											</div>
+										</div>
+										<div class="col-md-6 second-column">
+											<img src="img/gallery/retro-sm-6.jpg" alt="" class="img-responsive one">
+											<img src="img/gallery/retro-sm-4.jpg" alt="" class="img-responsive two">
+											<img src="img/gallery/retro-sm-5.jpg" alt="" class="img-responsive three">
+										</div>
+									</div>
+								</div>
+								<div class="carousel-item">
+									<div class="row">
+										<div class="col-md-6 one-column">
+											<img src="img/gallery/retro-sm-1.jpg" alt="" class="img-responsive">
+											<div class="fl-box">
+												<img src="img/gallery/retro-sm-2.jpg" alt="" class="img-responsive">
+												<img src="img/gallery/retro-sm-3.jpg" alt="" class="img-responsive">
+											</div>
+										</div>
+										<div class="col-md-6 second-column">
+											<img src="img/gallery/retro-sm-6.jpg" alt="" class="img-responsive one">
+											<img src="img/gallery/retro-sm-4.jpg" alt="" class="img-responsive two">
+											<img src="img/gallery/retro-sm-5.jpg" alt="" class="img-responsive three">
+										</div>
+									</div>
+								</div>
+								<div class="carousel-item">
+									<div class="row">
+										<div class="col-md-6 one-column">
+											<img src="img/gallery/retro-sm-1.jpg" alt="" class="img-responsive">
+											<div class="fl-box">
+												<img src="img/gallery/retro-sm-2.jpg" alt="" class="img-responsive">
+												<img src="img/gallery/retro-sm-3.jpg" alt="" class="img-responsive">
+											</div>
+										</div>
+										<div class="col-md-6 second-column">
+											<img src="img/gallery/retro-sm-6.jpg" alt="" class="img-responsive one">
+											<img src="img/gallery/retro-sm-4.jpg" alt="" class="img-responsive two">
+											<img src="img/gallery/retro-sm-5.jpg" alt="" class="img-responsive three">
+										</div>
+									</div>
+								</div>
+							</div>
+							<ol class="carousel-indicators">
+								<li data-target="#car-polza" data-slide-to="0" class="active"></li>
+								<li data-target="#car-polza" data-slide-to="1"></li>
+								<li data-target="#car-polza" data-slide-to="2"></li>
+							</ol>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="modal animated zoomIn" tabindex="-1" role="dialog" id="retro-sm-1">
+				<div class="modal-dialog modal-dialog-centered modal-lg" role="document">
+					<div class="embed-responsive embed-responsive-16by9">
+						<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/RysVHwwo_Ek"></iframe>
+					</div>
+				</div>
+			</div>
+		</section>
+		<section class="review">
+			<div class="container">
+				<div class="row">
+					<h2 class="h2">Отзывы наших клиентов</h2>
+					<div id="rev-carusel" class="carousel slide" data-ride="carousel">
+						<div class="carousel-inner">
+							<div class="carousel-item active">
+								<div class="row">
+									<div class="col-md-6 rev-video">
+										<div class="rev-video-container">
+											<div class="embed-responsive embed-responsive-16by9">
+												<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/6rezXEnAsyU"></iframe>
+											</div>
+											<div class="rev-video-caption">
+												<p class="caption-t"><strong>Видео-отзыв Андрея, Харьков</strong><br>Первый опыт перегонки самогона на аппарате AquaGradus</p>
+											</div>
+										</div>
+									</div>
+									<div class="col-md-6 rev-photo">
+										<div class="col-md-4 rev-photo-img">
+											Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum eum fugit libero necessitatibus dolorem esse ducimus! Labore illum excepturi, repellendus explicabo nulla aliquam esse, dicta modi, a accusantium quae pariatur.
+										</div>
+										<div class="col-md-8 rev-photo-caption">
+											Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tenetur architecto quod inventore molestias. Laudantium voluptatum, voluptates sit quos delectus perferendis nobis veritatis modi magni veniam qui perspiciatis! Quae, praesentium repellat.
+										</div>
+									</div>
+								</div>
+							</div>
+							<div class="carousel-item">
+								<div class="row">
+									<div class="col-md-6 rev-video">
+										<div class="rev-video-container">
+											<div class="embed-responsive embed-responsive-16by9">
+												<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/6rezXEnAsyU"></iframe>
+											</div>
+											<div class="rev-video-caption">
+												<p class="caption-t"><strong>Видео-отзыв Андрея, Харьков</strong><br>Первый опыт перегонки самогона на аппарате AquaGradus</p>
+											</div>
+										</div>
+									</div>
+									<div class="col-md-6 rev-photo">
+										Picture
+										Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque enim, at accusamus molestias maxime fuga minima rem necessitatibus itaque quas sint architecto eligendi. Assumenda aperiam reprehenderit nostrum cum. Id, amet.
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="carousel-control">
+							<a class="carousel-control-prev" href="#rev-carusel" role="button" data-slide="prev"></a>
+							<a class="carousel-control-next" href="#rev-carusel" role="button" data-slide="next"></a>
 						</div>
 					</div>
 				</div>
@@ -673,11 +934,5 @@
 		<script src="js/scripts.min.js"></script>
 		<script src="https://www.youtube.com/iframe_api"></script>
 		<script src="libs/videoAPI/video.js"></script>
-		<script src="libs/owl-carousel/owl.carousel.min.js"></script>
-		<!-- <script>
-			$(function() {
-				$(".owl-carousel").owlCarousel();
-			});
-		</script> -->
 	</body>
 </html>
