--- a/app/index.html
+++ b/app/index.html
@@ -749,32 +749,14 @@
 								<div class="carousel-item">
 									<div class="row">
 										<div class="col-md-6 one-column">
-											<img src="img/gallery/plant/g-svar-m-sm.jpg" alt="" class="img-responsive" data-toggle="modal" data-target="#g-svar-m">
+											<img src="img/gallery/plant/g-yamkastya-m-sm.jpg" alt="" class="img-responsive" data-toggle="modal" data-target="#g-yamkastya-m">
 											<div class="fl-box">
-												<img src="img/gallery/plant/g-gibka-m-sm.jpg" alt="" class="img-responsive" data-toggle="modal" data-target="#g-gibka-m">
-												<img src="img/gallery/plant/g-polir-m-sm.jpg" alt="" class="img-responsive" data-toggle="modal" data-target="#g-polir-m">
+												<img src="img/gallery/plant/g-val-m-sm.jpg" alt="" class="img-responsive" data-toggle="modal" data-target="#g-val-m">
+												<img src="img/gallery/plant/g-rezka-m-sm.jpg" alt="" class="img-responsive" data-toggle="modal" data-target="#g-rezka-m">
 											</div>
 										</div>
 										<div class="col-md-6 second-column">
-											<img src="img/gallery/plant/g-plant-m-sm.jpg" alt="" class="img-responsive one" data-toggle="modal" data-target="#g-plant-m">
-											<img src="img/gallery/plant/g-lazer-m-sm.jpg" alt="" class="img-responsive two" data-toggle="modal" data-target="#g-lazer-m">
-											<img src="img/gallery/plant/g-katka-m-sm.jpg" alt="" class="img-responsive three" data-toggle="modal" data-target="#g-katka-m">
-										</div>
-									</div>
-								</div>
-								<div class="carousel-item">
-									<div class="row">
-										<div class="col-md-6 one-column">
-											<img src="img/gallery/plant/g-svar-m-sm.jpg" alt="" class="img-responsive" data-toggle="modal" data-target="#g-svar-m">
-											<div class="fl-box">
-												<img src="img/gallery/plant/g-gibka-m-sm.jpg" alt="" class="img-responsive" data-toggle="modal" data-target="#g-gibka-m">
-												<img src="img/gallery/plant/g-polir-m-sm.jpg" alt="" class="img-responsive" data-toggle="modal" data-target="#g-polir-m">
-											</div>
-										</div>
-										<div class="col-md-6 second-column">
-											<img src="img/gallery/plant/g-plant-m-sm.jpg" alt="" class="img-responsive one" data-toggle="modal" data-target="#g-plant-m">
-											<img src="img/gallery/plant/g-lazer-m-sm.jpg" alt="" class="img-responsive two" data-toggle="modal" data-target="#g-lazer-m">
-											<img src="img/gallery/plant/g-katka-m-sm.jpg" alt="" class="img-responsive three" data-toggle="modal" data-target="#g-katka-m">
+											<img src="img/gallery/plant/g-android-m-sm.jpg" alt="" class="img-responsive" data-toggle="modal" data-target="#g-android-m">
 										</div>
 									</div>
 								</div>
@@ -782,7 +764,6 @@
 							<ol class="carousel-indicators">
 								<li data-target="#car-zavod" data-slide-to="0" class="active"></li>
 								<li data-target="#car-zavod" data-slide-to="1"></li>
-								<li data-target="#car-zavod" data-slide-to="2"></li>
 							</ol>
 						</div>
 					</div>
@@ -938,6 +919,26 @@
 					<img src="img/gallery/plant/g-katka-m-big.jpg" alt="" class="img-responsive modal-content">
 				</div>
 			</div>
+			<div class="modal animated zoomIn" tabindex="-1" role="dialog" id="g-android-m">
+				<div class="modal-dialog modal-dialog-centered modal-lg" role="document">
+					<img src="img/gallery/plant/g-android-m-big.jpg" alt="" class="img-responsive modal-content">
+				</div>
+			</div>
+			<div class="modal animated zoomIn" tabindex="-1" role="dialog" id="g-yamkastya-m">
+				<div class="modal-dialog modal-dialog-centered modal-lg" role="document">
+					<img src="img/gallery/plant/g-yamkastya-m-big.jpg" alt="" class="img-responsive modal-content">
+				</div>
+			</div>
+			<div class="modal animated zoomIn" tabindex="-1" role="dialog" id="g-val-m">
+				<div class="modal-dialog modal-dialog-centered modal-lg" role="document">
+					<img src="img/gallery/plant/g-val-m-big.jpg" alt="" class="img-responsive modal-content">
+				</div>
+			</div>
+			<div class="modal animated zoomIn" tabindex="-1" role="dialog" id="g-rezka-m">
+				<div class="modal-dialog modal-dialog-centered modal-lg" role="document">
+					<img src="img/gallery/plant/g-rezka-m-big.jpg" alt="" class="img-responsive modal-content">
+				</div>
+			</div>
 		</section>
 		<section class="review">
 			<div class="container">
@@ -1057,38 +1058,38 @@
 					<p class="title">Закажи дополнительное оборудование!</p>
 					<div class="adds-line">
 						<div class="col-md-3 adds-box">
-							<img src="img/adds/deflegmator.png" alt="" class="img-responsive adds-img">
-							<p class="adds-name">Дефлегматор AquaGradus</p>
-							<div class="adds-text">Для эксперементов, перегонка: густых зерновых браг, фруктовых ароматных браг.</div>
+							<img src="img/adds/nasadka.png" alt="Насадка СПН для самогонного аппарата" class="img-responsive adds-img">
+							<p class="adds-name">Спирально призматическая насадка (СПН), 1.5 кг</p>
+							<div class="adds-text">Для получения ректификата, 96.6 градусов.</div>
 							<div class="adds-prise">
-								<p class="price"><span>Цена: </span>1000грн</p>
+								<p class="price"><span>Цена: </span>1500грн</p>
 							</div>
 							<button class="btn btn-orange adds-btn">купить</button>
 						</div>
 						<div class="col-md-3 adds-box">
-							<img src="img/adds/deflegmator.png" alt="" class="img-responsive adds-img">
-							<p class="adds-name">Дефлегматор AquaGradus</p>
-							<div class="adds-text">Для эксперементов, перегонка: густых зерновых браг, фруктовых ароматных браг.</div>
+							<img src="img/adds/regulyator.png" alt="" class="img-responsive adds-img">
+							<p class="adds-name">Регулятор мощности нагрева АГ-2</p>
+							<div class="adds-text">Для организации автономного нагрева: скорость перегонки и мобильность эксплуатации.</div>
 							<div class="adds-prise">
-								<p class="price"><span>Цена: </span>1000грн</p>
+								<p class="price"><span>Цена: </span>1600грн</p>
 							</div>
 							<button class="btn btn-orange adds-btn">купить</button>
 						</div>
 						<div class="col-md-3 adds-box">
-							<img src="img/adds/deflegmator.png" alt="" class="img-responsive adds-img">
-							<p class="adds-name">Дефлегматор AquaGradus</p>
-							<div class="adds-text">Для эксперементов, перегонка: густых зерновых браг, фруктовых ароматных браг.</div>
+							<img src="img/adds/ten.png" alt="" class="img-responsive adds-img">
+							<p class="adds-name">Водяной ТЭН для самогонного аппарата</p>
+							<div class="adds-text">Для организации автономного и комбинированного нагрева.</div>
 							<div class="adds-prise">
-								<p class="price"><span>Цена: </span>1000грн</p>
+								<p class="price"><span>Цена: </span>250грн</p>
 							</div>
 							<button class="btn btn-orange adds-btn">купить</button>
 						</div>
 						<div class="col-md-3 adds-box">
-							<img src="img/adds/deflegmator.png" alt="" class="img-responsive adds-img">
-							<p class="adds-name">Дефлегматор AquaGradus</p>
-							<div class="adds-text">Для эксперементов, перегонка: густых зерновых браг, фруктовых ароматных браг.</div>
+							<img src="img/adds/zaglushka.png" alt="" class="img-responsive adds-img">
+							<p class="adds-name">Муфта под ТЭН (заглушка продается отдельно)</p>
+							<div class="adds-text">Для организации автономного нагрева.</div>
 							<div class="adds-prise">
-								<p class="price"><span>Цена: </span>1000грн</p>
+								<p class="price"><span>Цена: </span>250грн</p>
 							</div>
 							<button class="btn btn-orange adds-btn">купить</button>
 						</div>
@@ -1104,29 +1105,29 @@
 							<button class="btn btn-orange adds-btn">купить</button>
 						</div>
 						<div class="col-md-3 adds-box">
-							<img src="img/adds/deflegmator.png" alt="" class="img-responsive adds-img">
-							<p class="adds-name">Дефлегматор AquaGradus</p>
-							<div class="adds-text">Для эксперементов, перегонка: густых зерновых браг, фруктовых ароматных браг.</div>
+							<img src="img/adds/aromadioptr.png" alt="" class="img-responsive adds-img">
+							<p class="adds-name">Арома-Диоптр Aquagradus, фланец</p>
+							<div class="adds-text">Для более комфортной перегонки и ароматизации продукта.</div>
 							<div class="adds-prise">
-								<p class="price"><span>Цена: </span>1000грн</p>
+								<p class="price"><span>Цена: </span>2150грн</p>
 							</div>
 							<button class="btn btn-orange adds-btn">купить</button>
 						</div>
 						<div class="col-md-3 adds-box">
-							<img src="img/adds/deflegmator.png" alt="" class="img-responsive adds-img">
-							<p class="adds-name">Дефлегматор AquaGradus</p>
-							<div class="adds-text">Для эксперементов, перегонка: густых зерновых браг, фруктовых ароматных браг.</div>
+							<img src="img/adds/popugay.png" alt="" class="img-responsive adds-img">
+							<p class="adds-name">Непрерывный контроль крепости (Попугай)</p>
+							<div class="adds-text">Для точного измерения продукта в реальном времени.</div>
 							<div class="adds-prise">
-								<p class="price"><span>Цена: </span>1000грн</p>
+								<p class="price"><span>Цена: </span>750грн</p>
 							</div>
 							<button class="btn btn-orange adds-btn">купить</button>
 						</div>
 						<div class="col-md-3 adds-box">
-							<img src="img/adds/deflegmator.png" alt="" class="img-responsive adds-img">
-							<p class="adds-name">Дефлегматор AquaGradus</p>
-							<div class="adds-text">Для эксперементов, перегонка: густых зерновых браг, фруктовых ароматных браг.</div>
+							<img src="img/adds/kit.png" alt="" class="img-responsive adds-img">
+							<p class="adds-name">Набор профессиональных ареометров и мерная колба</p>
+							<div class="adds-text">Для точного измерения продукта (3 ареометра и мерная колба).</div>
 							<div class="adds-prise">
-								<p class="price"><span>Цена: </span>1000грн</p>
+								<p class="price"><span>Цена: </span>350грн</p>
 							</div>
 							<button class="btn btn-orange adds-btn">купить</button>
 						</div>
