--- a/app/politika-konfidencialnosti/index.html
+++ b/app/politika-konfidencialnosti/index.html
@@ -158,7 +158,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 				<div class="f-col">
 					<h5 class="title">Контакты</h5>
 					<div>
-						<a href="tel:+380504281710" class="num">+38 (050) 428-17-10</a><a href="tel:+380673262766" class="num">+38 (067) 326-27-66</a>
+						<a href="tel:+380504281710" class="num">+38 (050) 428-17-10</a><br><a href="tel:+380673262766" class="num">+38 (067) 326-27-66</a>
 					</div>
 					<p>ул. Шиллингера 3, г. Харьков</p>
 					<p>aquagradus@gmail.com</p>
